# gobject-demo

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: circle.h  errors.h  movable.h  movable_point.h  output_helpers.h  point.h  renderable.h  resizeable.h  shape.h  square.h
src/: circle.c  movable.c  movable_point.c  output_helpers.c  point.c  renderable.c  resizeable.c  shape.c  square.c
